# elasticsearch-rs-wasi

.cargo/: config.toml
elasticsearch/: Cargo.toml
elasticsearch/src/: cert.rs
elasticsearch/src/http/: transport.rs
