[package]
name = "elasticsearch"
version = "8.6.0-alpha.1"
edition = "2018"
authors = ["Elastic and Contributors"]
description = "Official Elasticsearch Rust client"
repository = "https://github.com/elastic/elasticsearch-rs"
keywords = ["elasticsearch", "elastic", "search", "lucene"]
categories = ["api-bindings", "database"]
documentation = "https://docs.rs/elasticsearch/"
license = "Apache-2.0"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

# beta and experimental APIs
beta-apis = []
experimental-apis = ["beta-apis"]

# optional TLS
native-tls = ["reqwest_wasi/native-tls"]
rustls-tls = ["reqwest_wasi/rustls-tls"]

[dependencies]
base64 = "^0.11"
bytes = "^1.0"
dyn-clone = "~1"
lazy_static = "1.4"
percent-encoding = "2.1.0"
reqwest_wasi = { version = "0.11", features = ["json"] }
url = "^2.1"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde_with = "~1"
void = "1.0.2"

[dev-dependencies]
chrono = { version = "^0.4", features = ["serde"] }
clap = "~2"
failure = "0.1.5"
futures = "0.3.1"
http = "0.2"
hyper_wasi = { version = "0.15.2", default-features = false, features = [
  "tcp",
  "stream",
  "server",
] }
os_type = "2.2"
regex = "1.4"
sysinfo = "0.12.0"
textwrap = "^0.11"
tokio_wasi = { version = "1.0", default-features = false, features = [
  "macros",
  "net",
  "io-util",
  "rt",
  "time",
] }
xml-rs = "^0.8"

[build-dependencies]
rustc_version = "0.2"
